--- a/shop/templates/shop/add_cd.html
+++ b/shop/templates/shop/add_cd.html
@@ -2,15 +2,11 @@
 {% load static %}
 
 {% block page_header %}
-<div class="container header-container">
-    <div class="row">
-        <div class="col"></div>
-    </div>
-</div>
+<!--Spacer-->
+<div class="header-container"></div>
 {% endblock %}
 
 {% block content %}
-<div class="overlay"></div>
 <div class="container">
     <div class="row justify-content-center mt-5">
         <div class="col-12 col-md-6">
@@ -20,18 +16,24 @@
     </div>
     <div class="row justify-content-center">
         <div class="col-12 col-md-6">
-            <form method="POST" action="{% url 'add_cd' %}" class="form mb-2" enctype="multipart/form-data">
+            <form method="POST" action="{% url 'add_cd' %}" class="form mb-2"
+                enctype="multipart/form-data">
                 {% csrf_token %}
                 {% for field in form %}
                 {% if field.name != 'image' %}
+                <!--Renders as crispy if field is not image-->
                 {{ field | as_crispy_field }}
                 {% else %}
+                <!--Else renders it normally-->
                 {{ field }}
                 {% endif %}
                 {% endfor %}
                 <div class="text-right">
-                    <a class="btn btn-outline-black rounded-0" href="{% url 'shop' %}">Cancel</a>
-                    <button class="btn btn-black rounded-0" type="submit">Add CD</button>
+                    <a class="btn btn-outline-black rounded-0"
+                        href="{% url 'shop' %}">Cancel</a>
+                    <button class="btn btn-black rounded-0" type="submit">
+                        Add CD
+                    </button>
                 </div>
             </form>
         </div>
@@ -41,13 +43,11 @@
 
 {% block postjs %}
 {{ block.super }}
-<script src="{% static 'shop/js/image_script.min.js' %}" type="text/javascript"></script>
+<script src="{% static 'shop/js/image_script.min.js' %}"
+    type="text/javascript"></script>
 {% endblock %}
 
 {% block page_footer %}
-<div class="container footer-container">
-    <div class="row">
-        <div class="col"></div>
-    </div>
-</div>
+<!--Spacer-->
+<div class="footer-container"></div>
 {% endblock page_footer %}
