--- a/shop/templates/shop/cd_details.html
+++ b/shop/templates/shop/cd_details.html
@@ -2,19 +2,16 @@
 {% load static %}
 
 {% block page_header %}
-<div class="container header-container">
-    <div class="row">
-        <div class="col"></div>
-    </div>
-</div>
+<!--Spacer-->
+<div class="header-container"></div>
 {% endblock page_header %}
 
 {% block content %}
-<div class="overlay"></div>
-
 <div id="delivery-banner" class="row text-center">
     <div class="col text-black bg-warning py-2">
-        <h4 class="logo-font my-1">Free delivery if you buy {{ free_delivery_threshold }} CDs!</h4>
+        <h4 class="logo-font my-1">Free delivery if you buy
+            {{ free_delivery_threshold }} CDs!
+        </h4>
     </div>
 </div>
 <h1 class="mt-5 pt-lg-5 cd-title">{{ cd.name }}</h1>
@@ -22,13 +19,15 @@
     <div class="row">
         <div class="col text-center">
             {% if request.user.is_superuser %}
+            <!-- Edit/delete Admins-->
             <p class="mb-0 font-weight-bold lead">
                 <a href="{% url 'edit_cd' cd.id %}">
                     <span class="icon">
                         <i class="fas fa-edit"></i>
                     </span>
                 </a> |
-                <a class="text-danger" title="Remove" data-toggle="modal" data-target="#deleteCdModal">
+                <a class="text-danger" title="Remove" data-toggle="modal"
+                    data-target="#deleteCdModal">
                     <i class="fas fa-trash"></i>
                 </a>
             </p>
@@ -38,20 +37,14 @@
     </div>
 </div>
 {% include 'includes/cd_details_content.html' %}
-
-
 {% endblock content %}
 
 {% block page_footer %}
-<div class="container footer-container">
-    <div class="row">
-        <div class="col"></div>
-    </div>
-</div>
+<!--Spacer-->
+<div class="footer-container"></div>
 {% endblock page_footer %}
 
 {% block postjs %}
 {{ block.super }}
 <script src="{% static 'shop/js/quantity_input_script.min.js' %}"></script>
 {% endblock postjs %}
-
