--- a/shop/templates/shop/shop.html
+++ b/shop/templates/shop/shop.html
@@ -2,22 +2,18 @@
 {% load static %}
 
 {% block page_header %}
-<div class="container header-container">
-    <div class="row">
-        <div class="col"></div>
-    </div>
-</div>
+<!--Spacer-->
+<div class="header-container"></div>
 {% endblock %}
 
 {% block content %}
-<div class="overlay"></div>
-
 <div id="delivery-banner" class="row text-center">
     <div class="col text-black bg-warning py-2">
-        <h4 class="logo-font my-1">Free delivery if you buy {{ free_delivery_threshold }} CDs!</h4>
+        <h4 class="logo-font my-1">Free delivery if you buy
+            {{ free_delivery_threshold }} CDs!
+        </h4>
     </div>
 </div>
-
 <div class="container-fluid mt-md-5">
     <div class="row">
         <div class="col">
@@ -35,9 +31,9 @@
         </div>
     </div>
 </div>
-
 {% endblock content %}
 
 {% block page_footer %}
+<!--Spacer-->
 <div class="footer-container"></div>
 {% endblock page_footer %}
