--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -1,21 +1,34 @@
 {% load static %}
 {% block page_footer %}
-
+<!--Footer-->
 <footer class="site-footer">
     <div class="container">
         <div class="row">
             <div class="mb-0 col-12 col-md-6 text-left">
                 <h6 class="titles-footer">About</h6>
-                <p>This website has been created for educational purposes. Solely the author is responsible for any involuntary infringement of copyrights.</p>
+                <p>This website has been created for educational purposes.
+                    Solely the author is responsible for any involuntary
+                    infringement of copyrights.
+                </p>
             </div>
             <div class="col-12 col-md-6 text-left text-md-right mb-0">
                 <h6 class="titles-footer">Contact</h6>
                 <ul class="footer-links">
-                    <li><i class="fas fa-home mr-3"></i>Waddenweg 149,</li>
-                    <li>2134XL, Hoofddorp, NL</li>
-                    <li><i class="fas fa-phone mr-3"></i>+31 6 5106 3002</li>
-                    <li><i class="fas fa-envelope mr-3"></i>
-                        <a id="trigger-contact" class="email" href="#">Contact</a>
+                    <li>
+                        <i class="fas fa-home mr-3"></i>
+                        Waddenweg 149,
+                    </li>
+                    <li>
+                        2134XL, Hoofddorp, NL
+                    </li>
+                    <li>
+                        <i class="fas fa-phone mr-3"></i>
+                        +31 6 5106 3002
+                    </li>
+                    <li>
+                        <i class="fas fa-envelope mr-3"></i>
+                        <a id="trigger-contact" class="email" href="#">Contact
+                        </a>
                     </li>
                 </ul>
             </div>
@@ -25,15 +38,42 @@
     <div class="container">
         <div class="row">
             <div class="col-md-8 col-sm-6 col-xs-12 text-left">
-                <p class="copyright-text">Copyright &copy; 2020 All Rights Reserved.
+                <p class="copyright-text">Copyright &copy; 2020 All Rights
+                    Reserved.
                 </p>
             </div>
             <div class="col-md-4 col-sm-6 col-xs-12">
+                <!--Social links-->
                 <ul class="social-icons">
-                    <li><a class="github" href="https://github.com/GBrachetta" target="_blank" rel="noopener"><i class="fa fa-github"></i></a></li>
-                    <li><a class="twitter" href="https://twitter.com/GBrachetta" target="_blank" rel="noopener"><i class="fa fa-twitter"></i></a></li>
-                    <li><a class="instagram" href="https://www.instagram.com/brachetta/" target="_blank" rel="noopener"><i class="fa fa-instagram"></i></a></li>
-                    <li><a class="linkedin" href="https://www.linkedin.com/in/guillermo-brachetta-027764174" target="_blank" rel="noopener"><i class="fa fa-linkedin"></i></a></li>
+                    <li>
+                        <a class="github" href="https://github.com/GBrachetta"
+                            target="_blank" rel="noopener">
+                            <i class="fa fa-github"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="twitter" href="https://twitter.com/GBrachetta"
+                            target="_blank" rel="noopener">
+                            <i class="fa fa-twitter">
+                            </i>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="instagram"
+                            href="https://www.instagram.com/brachetta/"
+                            target="_blank" rel="noopener">
+                            <i class="fa fa-instagram">
+                            </i>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="linkedin"
+                            href="https://www.linkedin.com/in/guillermo-brachetta-027764174"
+                            target="_blank" rel="noopener">
+                            <i class="fa fa-linkedin">
+                            </i>
+                        </a>
+                    </li>
                 </ul>
             </div>
         </div>
