--- a/templates/includes/toasts/toast_warning.html
+++ b/templates/includes/toasts/toast_warning.html
@@ -1,6 +1,7 @@
-<div class="toast custom-toast rounded-0 border-top-0" data-autohide="true" data-delay="3000">
-    <div class="toast-header bg-white text-dark">
-    </div>
+<!--Toast for warning messages-->
+<div class="toast custom-toast rounded-0 border-top-0" data-autohide="true"
+    data-delay="3000">
+    <div class="toast-header bg-white text-dark"></div>
     <div class="toast-body bg-white">
         {{ message }}
     </div>
