--- a/templates/errors/500.html
+++ b/templates/errors/500.html
@@ -1,10 +1,6 @@
 {% extends 'base.html' %}
 {% block page_header %}
-<div class="container header-container">
-    <div class="row">
-        <div class="col">t</div>
-    </div>
-</div>
+<div class="header-container"></div>
 {% endblock %}
 
 {% block content %}
