--- a/templates/includes/navigation.html
+++ b/templates/includes/navigation.html
@@ -1,9 +1,15 @@
 {% load static %}
-<nav class="navbar fixed-top navbar-icon-top navbar-expand-lg navbar-expand-xl navbar-dark bg-dark">
-
+<!--Navbar-->
+<nav
+    class="navbar fixed-top navbar-icon-top navbar-expand-lg navbar-expand-xl navbar-dark bg-dark">
     <a class="pr-3" href="{% url 'home' %}">
-        <svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="72" height="72" viewBox="0 0 560.130321 506.623658" preserveAspectRatio="xMidYMid meet">
-            <g class="logo" transform="translate(-4.869679,509.981954) scale(0.100000,-0.100000)" stroke="none">
+        <!--Logo (SVG) Home button-->
+        <svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="72"
+            height="72" viewBox="0 0 560.130321 506.623658"
+            preserveAspectRatio="xMidYMid meet">
+            <g class="logo"
+                transform="translate(-4.869679,509.981954) scale(0.100000,-0.100000)"
+                stroke="none">
                 <path d="M5395 5072 c-225 -124 -706 -549 -1180 -1043 -640 -666 -957 -917
             -1480 -1176 -265 -131 -364 -171 -376 -152 -26 39 31 179 182 454 276 501 335
             609 427 792 53 105 93 195 90 199 -4 4 -47 -2 -95 -12 -63 -13 -131 -38 -241
@@ -28,11 +34,17 @@
             </g>
         </svg>
     </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse"
+        data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false"
+        aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
         <span class="md-none">
             {% if grand_total %}
-            <span class="badge badge-pill badge-red"><small>€</small></span>
+            <!--If there are items in the bag displays badge-->
+            <span class="badge badge-pill badge-red">
+                <small>€</small>
+            </span>
             {% endif %}
         </span>
     </button>
@@ -60,26 +72,45 @@
         </ul>
         <ul class="navbar-nav">
             <li class="nav-item dropdown px-2 text-left {{ profile }}">
-                <a class="nav-link navbar-items" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <a class="nav-link navbar-items" href="#" id="navbarDropdown"
+                    role="button" data-toggle="dropdown" aria-haspopup="true"
+                    aria-expanded="false">
                     <i class="fa fa-user"></i>
                     {% if request.user.is_authenticated %}
+                    <!--Options for authenticated user-->
                     {{ request.user.username }}
                     {% else %}
                     Profile
                     {% endif %}
                 </a>
-                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+                <div class="dropdown-menu dropdown-menu-right"
+                    aria-labelledby="navbarDropdown">
                     {% if request.user.is_authenticated %}
                     {% if request.user.is_superuser %}
-                    <a class="dropdown-item" href="{% url 'add_media' %}">Media Management</a>
-                    <a class="dropdown-item" href="{% url 'add_event' %}">Event Management</a>
-                    <a class="dropdown-item" href="{% url 'add_cd' %}">CDs Management</a>
+                    <!--Options for admins-->
+                    <a class="dropdown-item" href="{% url 'add_media' %}">
+                        Media Management
+                    </a>
+                    <a class="dropdown-item" href="{% url 'add_event' %}">
+                        Event Management
+                    </a>
+                    <a class="dropdown-item" href="{% url 'add_cd' %}">
+                        CDs Management
+                    </a>
                     {% endif %}
-                    <a class="dropdown-item" href="{% url 'profile' %}">Profile</a>
-                    <a class="dropdown-item" href="{% url 'account_logout' %}">Logout</a>
+                    <a class="dropdown-item" href="{% url 'profile' %}">
+                        Profile
+                    </a>
+                    <a class="dropdown-item" href="{% url 'account_logout' %}">
+                        Logout
+                    </a>
                     {% else %}
-                    <a class="dropdown-item" href="{% url 'account_signup' %}">Register</a>
-                    <a class="dropdown-item" href="{% url 'account_login' %}">Login</a>
+                    <a class="dropdown-item" href="{% url 'account_signup' %}">
+                        Register
+                    </a>
+                    <a class="dropdown-item" href="{% url 'account_login' %}">
+                        Login
+                    </a>
                     {% endif %}
                 </div>
             </li>
@@ -88,6 +119,7 @@
                 <a class="nav-link navbar-items " href="{% url 'view_bag' %}">
                     <i class="fa fa-shopping-bag">
                         {% if grand_total %}
+                        <!--Displays small badge if bag items when collapsed-->
                         <span class="badge badge-pill badge-red">€</span>
                         {% endif %}
                     </i>
