--- a/templates/includes/toasts/toast_error.html
+++ b/templates/includes/toasts/toast_error.html
@@ -1,7 +1,6 @@
-<div class="toast custom-toast rounded-0 border-top-0" data-autohide="true" data-delay="3000">
-    <div class="toast-header border-toast-error text-dark">
-    </div>
-    <div class="toast-body bg-white">
-        {{ message }}
-    </div>
+<!--Toast for error messages-->
+<div class="toast custom-toast rounded-0 border-top-0" data-autohide="true"
+    data-delay="3000">
+    <div class="toast-header border-toast-error text-dark"></div>
+    <div class="toast-body bg-white">{{ message }}</div>
 </div>
